--- a/vue-app/index.html
+++ b/vue-app/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script>
+      var a = 111
+      console.log(a);
+    </script>
   </body>
 </html>
